# local-deepwiki-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW.md  README.md  TODO.md  WIKI_IMPROVEMENTS.md  pyproject.toml
.claude/: settings.local.json
.deepwiki/: architecture.md  changelog.md  coverage.md  dependencies.md  freshness.md  glossary.md  index.md  index_status.json  inheritance.md  manifest_cache.json  search.json  toc.json  wiki_status.json
.deepwiki/files/: index.md
.deepwiki/files/src/local_deepwiki/: config.md  handlers.md  logging.md  models.md  server.md  validation.md  watcher.md
.deepwiki/files/tests/: test_api_docs.md  test_callgraph.md  test_changelog.md  test_chunker.md  test_config.md  test_crosslinks.md  test_deep_research.md  test_diagrams.md  test_git_utils.md  test_html_export.md  test_incremental_wiki.md  test_indexer.md  test_llm_cache.md  test_manifest.md  test_models.md  test_ollama_health.md  test_parser.md  test_pdf_export.md  test_provider_errors.md  test_retry.md  test_search.md  test_see_also.md  test_server_handlers.md  test_server_validation.md  test_source_refs.md  test_test_examples.md  test_toc.md  test_vectorstore.md  test_watcher.md  test_web.md
.deepwiki/modules/: index.md  src.md  tests.md
.deepwiki/vectors.lance/code_chunks.lance/_transactions/: 0-f9185b13-6e21-433d-acb0-933e0f257e79.txn
.deepwiki/vectors.lance/code_chunks.lance/_versions/: 1.manifest
docs/: WIKI_ENHANCEMENTS.md
src/local_deepwiki/: __init__.py  config.py  handlers.py  logging.py  models.py  server.py  validation.py  watcher.py
src/local_deepwiki/core/: __init__.py  chunker.py  deep_research.py  git_utils.py  indexer.py  llm_cache.py  parser.py  vectorstore.py
src/local_deepwiki/export/: __init__.py  html.py  pdf.py
src/local_deepwiki/generators/: __init__.py  api_docs.py  callgraph.py  changelog.py  context_builder.py  coverage.py  crosslinks.py  diagrams.py  glossary.py  inheritance.py  manifest.py  progress_tracker.py  search.py  see_also.py  source_refs.py  stale_detection.py  test_examples.py  toc.py  wiki.py  wiki_files.py  wiki_modules.py  wiki_pages.py  wiki_status.py
src/local_deepwiki/providers/: __init__.py  base.py
src/local_deepwiki/providers/embeddings/: __init__.py  local.py  openai.py
src/local_deepwiki/providers/llm/: __init__.py  anthropic.py  cached.py  ollama.py  openai.py
src/local_deepwiki/web/: __init__.py  app.py
src/local_deepwiki/web/templates/: chat.html  page.html
tests/: __init__.py  test_api_docs.py  test_callgraph.py  test_changelog.py  test_chunker.py  test_config.py  test_context_builder.py  test_coverage.py  test_crosslinks.py  test_deep_research.py  test_diagrams.py  test_export_init.py  test_git_utils.py  test_glossary.py  test_handlers_coverage.py  test_html_export.py  test_incremental_wiki.py  test_indexer.py  test_inheritance.py  test_llm_cache.py  test_llm_providers.py  test_local_embedding_provider.py  test_logging_coverage.py  test_manifest.py  test_models.py  test_ollama_health.py  test_openai_embedding_provider.py  test_parser.py  test_pdf_export.py  test_provider_errors.py  test_provider_factories.py  test_retry.py  test_search.py  test_see_also.py  test_server_handlers.py  test_server_validation.py  test_source_refs.py  test_stale_detection.py  test_test_examples.py  test_toc.py  (+8 more)
(+38 files in other folders)
